objects/EXPRN__Custom_Subcodes__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EXPRN__Decision_Subcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Subcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Linkage_Subcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Linkage Subcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Master_Subcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Subcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__RegionalBureauSubcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Regional Bureau Subcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Subcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Custom Subcodes</label>
</CustomObject>